52)  Added 2019.3.6f1 Unity Dependencies.
53)  Fixed Internal Failure issues with RotMG Exalt and Unity 2019.3.6f1.
54)  Fixed Internal Failure issues with Pistol Whip and Unity 2019.2.0f1.
55)  Fixed issue with MelonLoader.ModHandler complaining about Mod Libraries.
56)  Fixed issue with MelonCoroutines processing a yield of null as the same as WaitForFixedUpdate.

---

v0.0.3 Closed-Beta:

1)  General Stability and Optimization Improvements.
2)  Added Support for Mono based Games.
3)  Added MUPOT Mode which forces IL2CPP games to run under Mono. This Mode is still extremely Experimental.
4)  Logger has been renamed to MelonModLogger to prevent conflict with UnityEngine.Logger.
5)  Fixed Crash issue when using System.Type in MUPOT Mode.
6)  MelonModInfo Attribute has been changed to an Assembly Attribute.
7)  Fixed issue with MelonModLogger not getting the Mod Name when used outside of the main class.
8)  FileInfo in the TestMod has been renamed to BuildInfo so it won't conflict with the System.IO.FileInfo class.
9)  Added 0Harmony Integration and Support.
10)  Modified MelonLoader.ModHandler to use a Component based system in MUPOT Mode and Mono based games.
11)  Fixed issue preventing OnUpdate from being called in MUPOT Mode and Mono based games.
12)  Fixed issue preventing OnApplicationQuit from being called in MUPOT Mode and Mono based games.
13)  Fixed Conflict issue triggering Unity's Single Instance function in MUPOT Mode.
14)  Added OnLevelWasLoaded, OnLevelWasInitialized, OnUpdate, OnFixedUpdate, OnLateUpdate, and OnGUI for Mods in MUPOT Mode and Mono based games.
15)  Bug that prevented Debug Compilation is now fixed.
16)  Fixed issue that caused Unity Crash Handler to initialize MelonLoader twice.
17)  Fixed Runtime Initialization issue with Audica that caused crashes.
18)  Fixed Execution Order of MelonLoader.ModHandler.
19)  Fixed issue with Mono Game Support due to Mono DLL naming.
20)  Fixed issue with Internal Calls through MUPOT Mode.